[t1565] fixed button spacing

--- a/css/media-view.styl
+++ b/css/media-view.styl
@@ -8,7 +8,7 @@
 
   .butter-inner-container
     padding 10px
-    margin-bottom 20px
+    margin-bottom 30px
     visibility hidden
 
   &.open
